# FederlabCode

./: README  clines_manip.pl  dog_manip.pl  entropak.pl  estpost_split  gen_crc_jobs.pl  join_iterate.pl  lepmap_attempt.txt  pedigree_gen.pl  popfile_gen.pl  process_output.pl
clumpak/: 0  AdmixtureOutputFilesAccessor.pm  BestKByEvanno.pl  BestKByEvannoAccessor.pm  CLUMPAK.pl  CLUMPAK.pl.beforeOfer.pl  ClumpakSmokeTests.pl  ClumpakSmokeTestsExecuter.pl  ClumppAccessor.pm  ClumppIndMatrixAccessor.pm  ClusterAccessor.pm  CompareDifferentPrograms.pl  CompareDifferentProgramsAccessor.pm  CompareDifferentProgramsDataAccessor.pm  MCLAccessor.pm  MCLAccessorBeforeOfer.pm  MaxCliqueAccessor.pm  PDFCreator.pm  SmokeTestsMethods.pm  StructureOutputFilesAccessor.pm  Test.pl  ValidationTests.pm  ValidationTestsExecuter.pl  arabid.perm_datafile  distructForManyKs.pl  ibis_perl_modules.sh  log  test_clumpak.pl
clumpak/16725/: drawparams  ind  labels  out.ps  perm  pop
clumpak/distruct/: drawparams
entropy/: entropy
entropy/src/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  entropy.h  estpost_h5_entropy_orig.c  estpost_split.c  func.C  main.C  p.k2.fst2.txt  sim_commands.R  sim_commands_wPar.R
entropy/src/.deps/: func.Po  main.Po
entropy/src/CVS/: Entries
ld_filter/: HighLDgroups.txt  README  func.cpp  func.h  ldfilter  main.cpp
vcf_to_entropy/: README  functions.cpp  functions.h  main.cpp  vte
